--- a/web/public/main.css
+++ b/web/public/main.css
@@ -26,6 +26,9 @@ nav .groups {
   padding: 0;
   background: rgba(255, 255, 255, 0.125);
   position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
 }
 
 nav .groups li {
