--- a/web/public/colors.less
+++ b/web/public/colors.less
@@ -30,16 +30,19 @@ svg .node rect { fill: @base00; }
 #builds { background: @base00; }
 .builds-list { background: @base00; }
 .build-source .header { background: @base00; }
+.groups { background: @base00; }
 
 /* highlight background */
 svg .cluster { fill: @base02; }
 .build-resources { background: @base02; }
+.groups li.main a { background: @base02; }
 
 /* even more highlight background */
 svg .edge { stroke: @base03; }
 svg .gateway { fill: @base03; }
 .build-source.first-occurrence .header { background: @base03; }
 svg .node.job.normal rect { fill: @base03; }
+.groups li.active a { background: @base03; }
 
 /* dim */
 svg .edge.pending { stroke: @base04; }
