serve fly as fly.exe on windows, add downloads ui
[#87176298]

Signed-off-by: Chris Brown <cbrown@pivotal.io>

--- a/web/public/colors.css
+++ b/web/public/colors.css
@@ -119,6 +119,9 @@ svg h1 a {
 #version-history .toggle-resource-version {
   color: #f5f5f5;
 }
+#cli-downloads a {
+  color: #f5f5f5;
+}
 /* good */
 svg .edge.succeeded {
   stroke: #90a959;
