--- a/web/public/colors.less
+++ b/web/public/colors.less
@@ -69,6 +69,7 @@ svg h1 a { color: @base07; }
 #builds li a { color: @base07; }
 .groups li a { color: @base07; }
 #version-history .toggle-resource-version { color: @base07; }
+#cli-downloads a { color: @base07; }
 
 /* good */
 svg .edge.succeeded { stroke: @base0B; }
