--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -18,6 +18,12 @@
   </dl>
 </div>
 
+<ul id="cli-downloads">
+  <li><a href="{{url "DownloadCLI" "darwin" "amd64"}}"><i class="fa fa-apple"></i></a></li>
+  <li><a href="{{url "DownloadCLI" "windows" "amd64"}}"><i class="fa fa-windows"></i></a></li>
+  <li><a href="{{url "DownloadCLI" "linux" "amd64"}}"><i class="fa fa-linux"></i></a></li>
+</ul>
+
 <script src="{{url "Public" "jquery-2.1.1.min.js"}}"></script>
 <script src="{{url "Public" "d3.v3.min.js"}}"></script>
 <script src="{{url "Public" "graph.js"}}"></script>
