--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -4,6 +4,7 @@
     <title>{{template "title" .}}</title>
     <link href="{{url "Public" "main.css"}}" media="all" rel="stylesheet" type="text/css" />
     <link href="{{url "Public" "colors.css"}}" media="all" rel="stylesheet" type="text/css" />
+    <link href="{{url "Public" "font-awesome.min.css"}}" media="all" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <nav>
