--- a/web/public/main.css
+++ b/web/public/main.css
@@ -31,6 +31,11 @@ nav .groups {
   z-index: 2;
 }
 
+nav .groups li.main i {
+  position: relative;
+  bottom: -2px;
+}
+
 nav .groups li {
   display: inline-block;
 }
