--- a/web/public/colors.less
+++ b/web/public/colors.less
@@ -31,11 +31,13 @@ svg .node rect { fill: @base00; }
 .builds-list { background: @base00; }
 .build-source .header { background: @base00; }
 .groups { background: @base00; }
+.build-header .trigger-build button:active { background: @base00; }
 
 /* highlight background */
 svg .cluster { fill: @base02; }
 .build-resources { background: @base02; }
 .groups li.main a { background: @base02; }
+.build-header .trigger-build button:hover { background: @base02; }
 
 /* even more highlight background */
 svg .edge { stroke: @base03; }
@@ -56,6 +58,7 @@ li.pending { background: @base04; }
 .build-source .header .version { color: @base06; }
 #build-requires-auth input { color: @base06; }
 svg .node.resource a { color: @base06; }
+.build-header .trigger-build button { color: @base06; }
 
 /* emphasis */
 .build-header h1 { color: @base07; }
@@ -63,13 +66,14 @@ svg .node.resource a { color: @base06; }
 .resource-header h1 { color: @base07; }
 svg .edgeLabel text { fill: @base07; }
 svg h1 a { color: @base07; }
-.build-header .abort-build input:hover { color: @base07; }
-.build-header .abort-build input:active { color: @base07; }
+.build-header .abort-build button:hover { color: @base07; }
+.build-header .abort-build button:active { color: @base07; }
 .builds-list li a { color: @base07; }
 #builds li a { color: @base07; }
 .groups li a { color: @base07; }
 #version-history .toggle-resource-version { color: @base07; }
 #cli-downloads a { color: @base07; }
+.build-header .trigger-build button { color: @base07; }
 
 /* good */
 svg .edge.succeeded { stroke: @base0B; }
@@ -85,8 +89,8 @@ svg .node.job.failed rect { fill: @base08; }
 #page-header.failed { background: @base08; }
 li.failed { background: @base08; }
 .legend dt.failed { background: @base08; }
-.build-header .abort-build input { color: @base08; }
-.build-header .abort-build input:hover { background: @base08; }
+.build-header .abort-build button { color: @base08; }
+.build-header .abort-build button:hover { background: @base08; }
 span.error { color: @base08; }
 #version-history tr.enabled .toggle-resource-version { background: @base08; }
 
@@ -105,7 +109,7 @@ svg .node.job.aborted rect { fill: @base0F; }
 #page-header.aborted { background: @base0F; }
 li.aborted { background: @base0F; }
 .legend dt.aborted { background: @base0F; }
-.build-header .abort-build input:active { background: @base0F; }
+.build-header .abort-build button:active { background: @base0F; }
 
 /* active */
 #page-header.started { background: @base0A; }
