--- a/web/public/main.css
+++ b/web/public/main.css
@@ -87,7 +87,8 @@ nav .groups li a {
   float: right;
 }
 
-.build-header .trigger-build button {
+.build-header .trigger-build button,
+.build-header .abort-build button {
   background: transparent;
   border: none;
   font-family: inherit;
@@ -96,34 +97,24 @@ nav .groups li a {
   margin: 10px;
   width: 40px;
   height: 40px;
-  border-radius: 100%;
+  border-radius: 50%;
 }
 
+.build-header .abort-build button i,
 .build-header .trigger-build button i {
   position: relative;
   bottom: -2px;
 }
 
-.build-header .abort-build button i {
-  position: relative;
-  bottom: -1px;
-}
-
 .build-header .trigger-build button:active,
-.build-header .abort-build button:active {
+.build-header .abort-build button:active,
+.build-header .trigger-build button:focus,
+.build-header .abort-build button:focus {
   outline: none;
 }
 
 .build-header .abort-build button {
-  background: transparent;
-  border: none;
-  font-family: inherit;
-  font-size: 30px;
-  cursor: pointer;
   margin: 10px 0;
-  width: 40px;
-  height: 40px;
-  border-radius: 100%;
 }
 
 #cli-downloads {
