--- a/web/public/colors.less
+++ b/web/public/colors.less
@@ -18,6 +18,7 @@
 /* background */
 body { background: @base01; }
 #build-requires-auth input { background: @base01; }
+.steps .nest.even { background: @base01; }
 
 /* foreground */
 body { color: @base05; }
@@ -34,7 +35,7 @@ svg .node rect { fill: @base00; }
 
 /* highlight background */
 svg .cluster { fill: @base02; }
-.steps .nest { background: @base02; }
+.steps .nest.odd { background: @base02; }
 .groups li.main a { background: @base02; }
 
 /* even more highlight background */
