invert colors of build step status icons
this is way more noticeable

Signed-off-by: Chris Brown <cbrown@pivotal.io>

--- a/web/public/colors.less
+++ b/web/public/colors.less
@@ -56,6 +56,10 @@ svg .node.job.normal rect { fill: @base03; }
 .build-header .abort-build button i:active { color: @base07; background: @base0F; }
 .build-header .abort-build button i:focus { background: @base0F; }
 
+.build-step i.failed    { color: @base07; background: @base08; }
+.build-step i.succeeded { color: @base07; background: @base0B; }
+.build-step i.errored   { color: @base07; background: @base09; }
+
 /* dim */
 svg .edge.pending { stroke: @base04; }
 svg .node.job.pending rect { fill: @base04; }
@@ -88,7 +92,6 @@ svg .node.job.succeeded rect { fill: @base0B; }
 li.succeeded { background: @base0B; }
 .legend dt.succeeded { background: @base0B; }
 #version-history tr.disabled .toggle-resource-version { background: @base0B; }
-.build-step i.succeeded { color: @base0B; }
 
 /* bad */
 svg .edge.failed { stroke: @base08; }
@@ -98,7 +101,6 @@ li.failed { background: @base08; }
 .legend dt.failed { background: @base08; }
 span.error { color: @base08; }
 #version-history tr.enabled .toggle-resource-version { background: @base08; }
-.build-step i.failed { color: @base08; }
 
 /* like, really bad */
 svg .edge.errored { stroke: @base09; }
@@ -107,7 +109,6 @@ svg .node.job.errored rect { fill: @base09; }
 li.errored { background: @base09; }
 .legend dt.errored { background: @base09; }
 svg .node.resource.failing rect { fill: @base09; }
-.build-step i.errored { color: @base09; }
 
 /* not so bad */
 svg .edge.aborted { stroke: @base0F; }
