--- a/web/public/colors.css
+++ b/web/public/colors.css
@@ -86,6 +86,18 @@ svg .node.job.normal rect {
 .build-header .abort-build button i:focus {
   background: #8f5536;
 }
+.build-step i.failed {
+  color: #f5f5f5;
+  background: #ac4142;
+}
+.build-step i.succeeded {
+  color: #f5f5f5;
+  background: #90a959;
+}
+.build-step i.errored {
+  color: #f5f5f5;
+  background: #d28445;
+}
 /* dim */
 svg .edge.pending {
   stroke: #b0b0b0;
@@ -165,9 +177,6 @@ li.succeeded {
 #version-history tr.disabled .toggle-resource-version {
   background: #90a959;
 }
-.build-step i.succeeded {
-  color: #90a959;
-}
 /* bad */
 svg .edge.failed {
   stroke: #ac4142;
@@ -190,9 +199,6 @@ span.error {
 #version-history tr.enabled .toggle-resource-version {
   background: #ac4142;
 }
-.build-step i.failed {
-  color: #ac4142;
-}
 /* like, really bad */
 svg .edge.errored {
   stroke: #d28445;
@@ -211,9 +217,6 @@ li.errored {
 }
 svg .node.resource.failing rect {
   fill: #d28445;
-}
-.build-step i.errored {
-  color: #d28445;
 }
 /* not so bad */
 svg .edge.aborted {
