first occurrence of fetched resources are highlighted
[#90064956]

Signed-off-by: Chris Brown <cbrown@pivotal.io>

--- a/web/templates/build.html
+++ b/web/templates/build.html
@@ -38,6 +38,23 @@
 
 <script src="{{url "Public" "build.js"}}"></script>
 <script type="text/javascript">
+  {{range .Inputs}}
+  preloadInput(
+    {{.Name}},
+    {{.FirstOccurrence}},
+    {
+      {{range $name, $val := .Version}}
+        "{{$name}}": "{{$val}}",
+      {{end}}
+    },
+    [
+      {{range .Metadata}}
+        { name: "{{.Name}}", value: "{{.Value}}" },
+      {{end}}
+    ]
+  );
+  {{end}}
+
   streamLog({{url "BuildEvents" .Build | js}})
 </script>
 {{end}}
