serve assets with sha in url to force cache clear
[#81351632]

Signed-off-by: Chris Brown <cbrown@pivotal.io>

--- a/web/templates/build.html
+++ b/web/templates/build.html
@@ -36,7 +36,7 @@
   <div id="build-logs"></div>
 </div>
 
-<script src="{{url "Public" "build.js"}}"></script>
+<script src="{{asset "build.js"}}"></script>
 <script type="text/javascript">
   {{range .Inputs}}
   preloadInput(
