--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -24,10 +24,10 @@
   <li><a href="{{url "DownloadCLI" "linux" "amd64"}}"><i class="fa fa-linux"></i></a></li>
 </ul>
 
-<script src="{{url "Public" "jquery-2.1.1.min.js"}}"></script>
-<script src="{{url "Public" "d3.v3.min.js"}}"></script>
-<script src="{{url "Public" "graph.js"}}"></script>
-<script src="{{url "Public" "index.js"}}"></script>
+<script src="{{asset "jquery-2.1.1.min.js"}}"></script>
+<script src="{{asset "d3.v3.min.js"}}"></script>
+<script src="{{asset "graph.js"}}"></script>
+<script src="{{asset "index.js"}}"></script>
 
 <script>
 $(document).ready(function() {
