--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <title>{{template "title" .}}</title>
-    <link href="{{url "Public" "main.css"}}" media="all" rel="stylesheet" type="text/css" />
-    <link href="{{url "Public" "colors.css"}}" media="all" rel="stylesheet" type="text/css" />
-    <link href="{{url "Public" "font-awesome.min.css"}}" media="all" rel="stylesheet" type="text/css" />
+    <link href="{{asset "main.css"}}" media="all" rel="stylesheet" type="text/css" />
+    <link href="{{asset "colors.css"}}" media="all" rel="stylesheet" type="text/css" />
+    <link href="{{asset "font-awesome.min.css"}}" media="all" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <nav>
