--- a/web/templates/resource.html
+++ b/web/templates/resource.html
@@ -90,6 +90,6 @@
   </tbody>
 </table>
 
-<script src="{{url "Public" "jquery-2.1.1.min.js"}}"></script>
-<script src="{{url "Public" "resources.js"}}"></script>
+<script src="{{asset "jquery-2.1.1.min.js"}}"></script>
+<script src="{{asset "resources.js"}}"></script>
 {{end}}
