--- a/web/public/colors.less
+++ b/web/public/colors.less
@@ -101,6 +101,7 @@ li.failed { background: @base08; }
 .legend dt.failed { background: @base08; }
 span.error { color: @base08; }
 #version-history tr.enabled .toggle-resource-version { background: @base08; }
+.resource-check-status pre { color: @base08; }
 
 /* like, really bad */
 svg .edge.errored { stroke: @base09; }
@@ -108,7 +109,7 @@ svg .node.job.errored rect { fill: @base09; }
 #page-header.errored { background: @base09; }
 li.errored { background: @base09; }
 .legend dt.errored { background: @base09; }
-svg .node.resource.failing rect { fill: @base09; }
+svg .node.input.failing rect { fill: @base09; }
 
 /* not so bad */
 svg .edge.aborted { stroke: @base0F; }
