--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -11,6 +11,8 @@
       <ul class="groups"><li class="main"><a href="/"><i class="fa fa-home"></i></a></li>{{range .GroupStates}}<li{{if .Enabled}} class="active"{{end}}><a href="/?groups={{.Name}}">{{.Name}}</a></li>{{end}}</ul>
     </nav>
 
+    <div id="content">
     {{template "body" .}}
+    </div>
   </body>
 </html>
