defer rendering finished builds until last event
this should speed up viewing older builds, and fix the jumping around

--- a/web/templates/build.html
+++ b/web/templates/build.html
@@ -55,6 +55,6 @@
   );
   {{end}}
 
-  streamLog({{url "BuildEvents" .Build | js}})
+  streamLog({{url "BuildEvents" .Build | js}}, {{.Build.Status | js}})
 </script>
 {{end}}
